; ModuleID = '/home/carl/AnghaBench/rufus/src/extr_drive.c_UnmountVolume.c'
source_filename = "/home/carl/AnghaBench/rufus/src/extr_drive.c_UnmountVolume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FSCTL_DISMOUNT_VOLUME = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"Could not unmount drive: %s\00", align 1
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @UnmountVolume(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @FSCTL_DISMOUNT_VOLUME, align 4
  %7 = call i32 @DeviceIoControl(i32 %5, i32 %6, i32* null, i32 0, i32* null, i32 0, i32* %4, i32* null)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = call i32 (...) @WindowsErrorString()
  %11 = call i32 @uprintf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load i32, i32* @FALSE, align 4
  store i32 %12, i32* %2, align 4
  br label %15

13:                                               ; preds = %1
  %14 = load i32, i32* @TRUE, align 4
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %13, %9
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @DeviceIoControl(i32, i32, i32*, i32, i32*, i32, i32*, i32*) #1

declare dso_local i32 @uprintf(i8*, i32) #1

declare dso_local i32 @WindowsErrorString(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
